--- a/force-app/main/default/classes/CommunitiesSelfRegController.cls
+++ b/force-app/main/default/classes/CommunitiesSelfRegController.cls
@@ -14,6 +14,7 @@ public class CommunitiesSelfRegController {
         String expid = ApexPages.currentPage().getParameters().get('expid');            
         if (expId != null) {
             Site.setExperienceId(expId); 
+            // Heeloo 2
         }    
     }
     
